<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="new_game">New Game</string>
    <string name="continue_game">Continue Game</string>
    <string name="options">Options</string>
    <string name="high_scores">High Scores</string>
    <string name="new_high_score">New High Score!</string>
    <string name="app_name">Lights Out</string>
    <string name="time">Time</string>
    <string name="moves">Moves</string>
    <string name="level">Level</string>
    <string name="total_time">Total time</string>
    <string name="total_moves">Total moves</string>
    <string name="level_time">Level time</string>
    <string name="level_moves">Level moves</string>
    <string name="level_passed">Level %n passed!</string>
    <string name="next_level">On to level %n!</string>
    <string name="game_over">Game over</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="high_score_enter_your_name">High Score! Enter your name:</string>
    <string name="name">Name</string>
    <string name="fastest_times">Fastest times</string>
    <string name="fewest_moves">Fewest moves</string>
    <string name="starting_level">Starting level</string>
    <string name="minimum_moves">Minimum moves:</string>
    <string name="game_saved">Game saved</string>
    <string name="erase_game">Starting a new game will erase your current game.</string>
    <string name="ok_to_erase">Ok to erase?</string>
    <string name="restart_level">Restart level</string>
    <string name="hint">Hint</string>
    <string name="hint_penalty">Each hint costs 10 moves and 30 seconds</string>
    <string name="level_start_message">Turn all the lights out!</string>
    <string name="reset_high_scores">Reset high scores</string>
    <string name="about">About</string>
    <string name="about_message">Copyright 2008 - Stephen McCarthy\n\nhttp://code.google.com/p/lights-out-android</string>
</resources>
