<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
   <TableLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:paddingTop="10dp"
       android:paddingBottom="10dp"
       android:stretchColumns="*">
     <TableRow
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="2dp"
           android:text="@string/level_time" />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="5dp"
           android:paddingRight="12dp"
           android:id="@+id/level_time_text" />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/level_moves" />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="5dp"
           android:paddingRight="1dp"
           android:id="@+id/level_moves_text" />
     </TableRow>
     <TableRow
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="2dp"
           android:text="@string/total_time" />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="5dp"
           android:paddingRight="12dp"
           android:id="@+id/total_time_text" />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/total_moves" />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="5dp"
           android:paddingRight="1dp"
           android:id="@+id/total_moves_text" />
     </TableRow>
   </TableLayout>
   <Button
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/next_level"
       android:id="@+id/dialog_button"/>
</LinearLayout>