<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
  
  
	  <TextView
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_gravity="center"
	       android:gravity="center_horizontal"
	       android:text="@string/high_scores"
	       android:textSize="28sp"
	       />
	       
	  <TextView
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_gravity="center"
	       android:gravity="center_horizontal"
	       android:text="@string/fastest_times"
	       android:paddingTop="25dp"
	       android:textSize="20sp"
	       />
	  <TableLayout android:id="@+id/time_table"
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:paddingRight="5dp"
        android:paddingLeft="5dp"
	      android:stretchColumns="1">
      <TableRow
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        >
	      <TextView
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          />
        <TextView android:id="@+id/level_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
	      <TextView
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:paddingRight="10dp"
            android:text="@string/time"
	         />
	      <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moves"
	         />
	    </TableRow>
	  </TableLayout>
	  
	  <TextView
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_gravity="center"
	       android:gravity="center_horizontal"
	       android:text="@string/fewest_moves"
	       android:paddingTop="25dp"
	       android:textSize="20sp"
	       />
	  <TableLayout android:id="@+id/moves_table"
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:paddingRight="5dp"
	      android:paddingLeft="5dp"
	      android:paddingBottom="20dp"
	      android:stretchColumns="1">
	    <TableRow
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        >
	     <TextView
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         />
	     <TextView android:id="@+id/level_time_text"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         />
	     <TextView
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:paddingRight="10dp"
	         android:text="@string/time"
	         />
	     <TextView
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:text="@string/moves"
	         />
	    </TableRow>
	  </TableLayout>
	  <Button android:id="@+id/high_scores_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingRight="35dp"
        android:paddingLeft="35dp"
        android:gravity="center"
        android:text="@string/ok"
        />
	  </LinearLayout>
</ScrollView>