<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical" 
	    android:gravity="center_horizontal" >
	  
	  <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
      <ImageView
          android:layout_width="300dp"
          android:layout_height="80dp"
          android:src="@drawable/lights_out_logo" />
    </LinearLayout>
	      
	  <LinearLayout
	      android:orientation="horizontal"
	      android:paddingTop="20dp"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content">
	    <ImageView
			    android:layout_width="50dp"
			    android:layout_height="50dp"
			    android:src="@drawable/lights_off" />
	    <ImageView
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:src="@drawable/lights_on" />
	    <ImageView
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:src="@drawable/lights_off" />
	    <ImageView
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:src="@drawable/lights_on" />
	    <ImageView
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:src="@drawable/lights_off" />
	    <ImageView
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:src="@drawable/lights_on" />
	  </LinearLayout>
	  
	  <LinearLayout
	      android:orientation="horizontal"
	      android:paddingTop="35dp"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content">
		  <Button android:id="@+id/new_game_button" 
		      android:text="@string/new_game"
		      android:layout_width="150dp"
		      android:layout_height="wrap_content" /> 
	  </LinearLayout>
	  <LinearLayout
	      android:orientation="horizontal"
	      android:paddingTop="15dp"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content">
	    <Button android:id="@+id/continue_game_button" 
	        android:text="@string/continue_game"
	        android:enabled="false"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content" /> 
	  </LinearLayout>
	  <LinearLayout
	      android:orientation="horizontal"
	      android:paddingTop="15dp"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content">
	    <Button android:id="@+id/high_scores_button" 
	        android:text="@string/high_scores"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content" /> 
	  </LinearLayout>
	</LinearLayout>
</ScrollView>